k8s/blue-green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: default
  labels:
    app: myapp
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: myapp
    version: blue  # Will be toggled between 'blue' and 'green'
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-blue
  namespace: default
  labels:
    app: myapp
    version: blue
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: myapp
    version: blue
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-green
  namespace: default
  labels:
    app: myapp
    version: green
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: myapp
    version: green
